# spaceball-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: tofix.md
spaceball/: CMakeLists.txt  serial.cc  serial.h  spaceball.cc  spaceball.h
spaceball-examples/: CMakeLists.txt
spaceball-examples/SerialPortSample/: CMakeLists.txt  SerialPortSample.cc
spaceball-examples/demo/: CMakeLists.txt  main.cc
spaceball-examples/mathgame/: CMakeLists.txt  main.cc
spaceball-examples/serial_connect/: CMakeLists.txt  main.cc  serial.cc  serial.h
spaceball/SerialPort/: github info for SerialPort code.txt
spaceball/tests/: CMakeLists.txt  spaceball_tests.cc
